Revert "fix(1278): vertically align notification close button"
This reverts commit c1b64e5bde82ccb552b26d31d0e9780fa8351de3.

--- a/src/Notification/Notification.scss
+++ b/src/Notification/Notification.scss
@@ -18,11 +18,13 @@
 
 .closeButton {
   position: absolute;
-  top: 50%;
-  bottom: 50%;
   right: 12px;
   display: flex;
   align-items: center;
+
+  // because IE11 doesn't vertically align. this doesn't break other
+  // browsers because nested <button> has explicit width/height
+  height: 0;
 }
 
 /*Position*/
